# gladstone

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
m4/: Makefile.am  Makefile.in  as-configure-opts.m4
refcode/: Makefile.am  Makefile.in  apply_patches.sh  tolower.sh
refcode/patches/: 0001-Optimised-DSP-emulation-code.patch
src/: Makefile.am  Makefile.in  g729common.h  gstg729dec.c  gstg729dec.h  gstg729enc.c  gstg729enc.h  gstg729plugin.c
